# transcriptbot

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  readme.md
src/: main.rs
src/types/: assembly_ai.rs
