[package]
name = "transcript-bot"
version = "0.1.0"
edition = "2021"

description = "Sits in Telegram groups, listens for audio and voice files, transcribes them using AssemblyAI and summarises them using OpenAI GPT3."
license = "MIT"

[dependencies]
futures = "0.3.21"
openai-api-fork = "0.2.1"
pw-telegram-bot-fork = "0.9.0"
reqwest = { version = "0.11.10", features = ["stream", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = [ "macros", "rt", "rt-multi-thread", "time" ] }
